--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
-    "next": "^14.0.1",
+    "next": "^14.0.4-canary.1",
     "react": "^18",
     "react-dom": "^18"
   },
