--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^10.16.4",
     "next": "^14.0.4-canary.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
