--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^14.0.4-canary.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.19.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.0"
   },
