--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "next": "^14.0.4-canary.6",
     "react": "^18",
