--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
@@ -19,9 +20,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.10.0"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
