--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.0.4-canary.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.19.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.6.13"
