--- a/package.json
+++ b/package.json
@@ -9,19 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.41",
     "animejs": "^3.2.2",
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "classnames": "^2.3.2",
-    "framer-motion": "^10.16.5",
-    "i": "^0.3.7",
     "next": "^14.0.4-canary.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.19.0",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.6.13"
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.12",
