--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/chart.js": "^2.9.41",
     "animejs": "^3.2.2",
     "axios": "^1.6.2",
     "chart.js": "^4.4.2",
     "classnames": "^2.3.2",
     "next": "^14.0.4-canary.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "sweetalert": "^2.1.2"
